@@ -25,6 +25,11 @@ OVN v24.03.1 - 12 Mar 2024
   - Bug fixes
   - Security: Fixed vulnerability CVE-2024-2182.
 
+Backported:
+    - Added new global config option NB_Global:options:vxlan_mode to support
+      ability to disable "VXLAN mode" to extend available tunnel IDs space for
+      datapaths from 4095 to 16711680.  For more details see man ovn-nb(5) for
+      mentioned option.
 OVN v24.03.0 - 01 Mar 2024
 --------------------------
   - DNS now have an "options" column for configuration of extra options.
